--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
         <div class="w-full min-h-screen flex items-center max-w-md bg-zinc-700 shadow-md p-8">
             <div class="bg-white w-full rounded-lg shadow p-6">
                 <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Login</h1>
-                <form action="/login" method="POST" class="space-y-6">
+                <form action="/user/login" method="POST" class="space-y-6">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
                         <input id="email" name="email" type="email" required
@@ -37,7 +37,7 @@
         <div class="flex items-center justify-center w-full h-full">
             <div class="bg-white w-full max-w-md rounded-lg shadow p-6">
                 <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Sign Up</h2>
-                <form action="/register" method="POST" class="space-y-6">
+                <form action="/user/register" method="POST" class="space-y-6">
                     <div>
                         <label for="signup-name" class="block text-sm font-medium text-gray-700">Username</label>
                         <input id="signup-name" name="name" type="text" required
